--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "twbs/bootstrap-sass",
+    "name": "thatsus/bs-sass",
     "description": "bootstrap-sass is a Sass-powered version of Bootstrap 3, ready to drop right into your Sass powered applications.",
     "keywords": ["bootstrap", "css", "sass"],
-    "homepage": "http://github.com/twbs/bootstrap-sass",
+    "homepage": "http://github.com/thatsus/bootstrap-sass",
     "authors": [
         {
             "name": "Thomas McDonald"
